--- a/.github/workflows/steps.yml
+++ b/.github/workflows/steps.yml
@@ -119,53 +119,53 @@ jobs:
   # #     - name: Print dir workdir contents
   # #       run: |
   # #         ls -lsa /home/runner/work/telerik-fp/telerik-fp
-  # upload:
-  #   name: Upload custom NGINX image to docker hub repo
-  #   needs: SAST
-  #   runs-on: ubuntu-latest
-  #   timeout-minutes: 10
-  #   steps:
-  #     - name: Build and get tag
-  #       uses: actions/checkout@v2
-  #       env: 
-  #         DOCKER_IMAGE_TAG: ${GITHUB_SHA:0:8}
-  #       run: docker build -t $DOCKER_HUB_REPO:${{ env.DOCKER_IMAGE_TAG }} -t $DOCKER_HUB_REPO:latest -f nginx.Dockerfile .
-  #     - name: Push to docker repo
-  #       run: |
-  #         docker login --username ${{ secrets.DOCKER_HUB_USERNAME }} --password ${{ secrets.DOCKER_HUB_PASSWORD }}
-  #         docker image push --all-tags $DOCKER_HUB_REPO
+  upload:
+    name: Upload custom NGINX image to docker hub repo
+    # needs: SAST
+    runs-on: ubuntu-latest
+    timeout-minutes: 10
+    steps:
+      - name: Checkout repo code
+        uses: actions/checkout@v2
+      - name: Build and get tag
+        id: build_get_tag
+        env: 
+          DOCKER_IMAGE_TAG: ${GITHUB_SHA:0:8}
+        run: |
+          echo "::set-output name=tag::${{ env.DOCKER_IMAGE_TAG }}"
+      #     docker build -t $DOCKER_HUB_REPO:${{ env.DOCKER_IMAGE_TAG }} -t $DOCKER_HUB_REPO:latest -f nginx.Dockerfile .
+      # - name: Push to docker repo
+      #   run: |
+      #     docker login --username ${{ secrets.DOCKER_HUB_USERNAME }} --password ${{ secrets.DOCKER_HUB_PASSWORD }}
+      #     docker image push --all-tags $DOCKER_HUB_REPO
   push_manifest:
     name: Update and push the new K manifest
     # needs: upload
     runs-on: ubuntu-latest
     steps:
-      - name: Get tag
-        uses: actions/checkout@v2
-        env: 
-          DOCKER_IMAGE_TAG: ${GITHUB_SHA:0:8}
       - name: Echo tag
         run: |
-          echo ${{ env.DOCKER_IMAGE_TAG }}
-      - name: Checkout config repo
-        uses: actions/checkout@v2
-        with:
-          repository: npghub/telerik-fp-config
-          persist-credentials: false
-          token: ${{ secrets.GIT_AUTOPUSH}}
-          # fetch-depth: 0
-      - name: Update config repo
-        env:
-          GITHUB_USERNAME: npghub
-          GITHUB_EMAIL: petko@nitropack.io
-        run: |
-          echo $DOCKER_IMAGE_TAG
-          sed -i "s/$(grep 5ko5ko\/telerikrepo k8s/deploy_k8.yml | awk -F':' '{print $3}')/${{ env.DOCKER_IMAGE_TAG }}/g" k8s/deploy_k8.yml
-          cat k8s/deploy_k8.yml
-          git config --local user.email "$GITHUB_EMAIL"
-          git config --local user.name "$GITHUB_USERNAME"
-          git remote set-url origin https://$GITHUB_USERNAME:${{ secrets.GIT_AUTOPUSH}}@github.com/$GITHUB_USERNAME/telerik-fp-config.git
-          git commit -am "Update K manifest"
-          git push
+          echo ${{ steps.build_get_tag.outputs.tag }}
+      # - name: Checkout config repo
+      #   uses: actions/checkout@v2
+      #   with:
+      #     repository: npghub/telerik-fp-config
+      #     persist-credentials: false
+      #     token: ${{ secrets.GIT_AUTOPUSH}}
+      #     # fetch-depth: 0
+      # - name: Update config repo
+      #   env:
+      #     GITHUB_USERNAME: npghub
+      #     GITHUB_EMAIL: petko@nitropack.io
+      #   run: |
+      #     echo $DOCKER_IMAGE_TAG
+      #     sed -i "s/$(grep 5ko5ko\/telerikrepo k8s/deploy_k8.yml | awk -F':' '{print $3}')/${{ env.DOCKER_IMAGE_TAG }}/g" k8s/deploy_k8.yml
+      #     cat k8s/deploy_k8.yml
+      #     git config --local user.email "$GITHUB_EMAIL"
+      #     git config --local user.name "$GITHUB_USERNAME"
+      #     git remote set-url origin https://$GITHUB_USERNAME:${{ secrets.GIT_AUTOPUSH}}@github.com/$GITHUB_USERNAME/telerik-fp-config.git
+      #     git commit -am "Update K manifest"
+      #     git push
   # DAST:
   #   name: StackHawk DAST scan
   #   needs: upload
