--- a/.github/workflows/steps.yml
+++ b/.github/workflows/steps.yml
@@ -175,7 +175,7 @@ jobs:
       - name: Update config repo
         run: |
           cat ${{ env.MANIFEST_FILE }}
-          sed -i "s/$(grep ${{ env.MANIFEST_FILE }} k8s/deploy_k8.yml | awk -F':' '{print $3}')/${{ needs.upload.outputs.tagoutput }}/g" ${{ env.MANIFEST_FILE }}
+          sed -i "s/$(grep ${{ env.MANIFEST_FILE }} ${{ env.MANIFEST_FILE }} | awk -F':' '{print $3}')/${{ needs.upload.outputs.tagoutput }}/g" ${{ env.MANIFEST_FILE }}
           git config --local user.email "${{ secrets.GHUB_EMAIL }}"
           git config --local user.name "${{ secrets.GHUB_USERNAME }}"
           git remote set-url origin https://${{ secrets.GHUB_USERNAME }}:${{ secrets.GIT_AUTOPUSH}}@github.com/${{ secrets.GHUB_USERNAME }}/${CONFIG_REPO}.git
