--- a/.github/workflows/steps.yml
+++ b/.github/workflows/steps.yml
@@ -122,7 +122,7 @@ jobs:
   #         ls -lsa /home/runner/work/telerik-fp/telerik-fp
   upload:
     name: Upload custom NGINX image to docker hub repo
-    # needs: [SAST, SCA]
+    needs: [SAST, SCA]
     runs-on: ubuntu-latest
     timeout-minutes: 10
     outputs:
@@ -158,7 +158,7 @@ jobs:
   push_manifest:
     name: Update and push the new K manifest
     runs-on: ubuntu-latest
-    needs: upload
+    needs: [upload, DAST]
     steps:
       - name: Echo tag
         run: |
